added: insert button and changed search bar style

--- a/registration-app/public/index.html
+++ b/registration-app/public/index.html
@@ -65,6 +65,8 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet" />
+    <link href="css/search.css" rel="stylesheet" />
+
 
     <link
       rel="stylesheet"
