--- a/registration-app/public/index.html
+++ b/registration-app/public/index.html
@@ -67,7 +67,6 @@
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/search.css" rel="stylesheet" />
 
-
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
@@ -103,6 +102,14 @@
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
   </body>
