--- a/registration-app/public/index.html
+++ b/registration-app/public/index.html
@@ -67,7 +67,7 @@
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/search.css" rel="stylesheet" />
     <link href="css/input.css" rel="stylesheet" />
-
+    <link href="css/loading.css" rel="stylesheet" />
 
     <link
       rel="stylesheet"
