--- a/registration-app/public/index.html
+++ b/registration-app/public/index.html
@@ -68,6 +68,7 @@
     <link href="css/search.css" rel="stylesheet" />
     <link href="css/input.css" rel="stylesheet" />
     <link href="css/loading.css" rel="stylesheet" />
+    <link href="css/profile.css" rel="stylesheet" />
 
     <link
       rel="stylesheet"
