added: page 404 not found

--- a/registration-app/public/index.html
+++ b/registration-app/public/index.html
@@ -69,6 +69,8 @@
     <link href="css/input.css" rel="stylesheet" />
     <link href="css/loading.css" rel="stylesheet" />
     <link href="css/profile.css" rel="stylesheet" />
+    <link href="css/error/404.css" rel="stylesheet" />
+
 
     <link
       rel="stylesheet"
