added: enroll function and error handler

--- a/registration-app/public/index.html
+++ b/registration-app/public/index.html
@@ -64,13 +64,13 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet" />
-    <link href="css/search.css" rel="stylesheet" />
-    <link href="css/input.css" rel="stylesheet" />
-    <link href="css/loading.css" rel="stylesheet" />
-    <link href="css/profile.css" rel="stylesheet" />
-    <link href="css/error/404.css" rel="stylesheet" />
-
+    <link href="./css/style.css" rel="stylesheet" />
+    <link href="./css/search.css" rel="stylesheet" />
+    <link href="./css/input.css" rel="stylesheet" />
+    <link href="./css/loading.css" rel="stylesheet" />
+    <link href="./css/profile.css" rel="stylesheet" />
+    <link href="./css/profile.css" rel="stylesheet" />
+    <link href="./css/detail.css" rel="stylesheet" />
 
     <link
       rel="stylesheet"
