added: skill handler for admin

--- a/registration-app/public/index.html
+++ b/registration-app/public/index.html
@@ -71,6 +71,7 @@
     <link href="./css/error/404.css" rel="stylesheet" />
     <link href="./css/profile.css" rel="stylesheet" />
     <link href="./css/detail.css" rel="stylesheet" />
+    <link href="./css/button.css" rel="stylesheet" />
 
     <link
       rel="stylesheet"
