--- a/registration-app/public/index.html
+++ b/registration-app/public/index.html
@@ -59,6 +59,7 @@
     <link href="./css/error/404.css" rel="stylesheet" />
     <link href="./css/profile.css" rel="stylesheet" />
     <link href="./css/detail.css" rel="stylesheet" />
+    <link href="./css/button.css" rel="stylesheet" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
     <link
